-- This file is only a stub file, please see default.nix for adding dependencies.
--
-- Learn more about dependency management in IHP: https://ihp.digitallyinduced.com/Guide/package-management.html
--
-- If you're looking at this file because you're trying to integrate a HLS or other tooling with your IHP project, check out the documentation on Editors and Tooling: https://ihp.digitallyinduced.com/Guide/editors.html
--
-- This cabal file is inside your project as some haskell tools only work when there's a cabal file. It's not actually used for anything besides providing support for haskell tools.
--

name:                App
version:             0.1.0.0
-- synopsis:
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Developers
maintainer:          developers@example.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable App
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
  	ihp,
  	base,
  	wai,
    text
  hs-source-dirs:      .
  default-language:    Haskell2010
  extensions:
    OverloadedStrings
    , NoImplicitPrelude
    , ImplicitParams
    , Rank2Types
    , DisambiguateRecordFields
    , NamedFieldPuns
    , DuplicateRecordFields
    , OverloadedLabels
    , FlexibleContexts
    , TypeSynonymInstances
    , FlexibleInstances
    , QuasiQuotes
    , TypeFamilies
    , PackageImports
    , ScopedTypeVariables
    , RecordWildCards
    , TypeApplications
    , DataKinds
    , InstanceSigs
    , DeriveGeneric
    , MultiParamTypeClasses
    , TypeOperators
    , DeriveDataTypeable
    , MultiWayIf
    , UndecidableInstances
    , BlockArguments
    , PartialTypeSignatures
    , LambdaCase
    , DefaultSignatures
    , EmptyDataDeriving
    , BangPatterns
    , BlockArguments
    , MultiWayIf
    , FunctionalDependencies
    , PartialTypeSignatures
    , StandaloneDeriving
    , DerivingVia