cabal-version:       2.2
name:                ihp
version:             0.1.0.0
synopsis:            Haskell Web Framework
description:         The Integrated Haskell Platform is a full stack framework focused on rapid application development while striving for robust code quality.
license:             NONE
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
-- copyright:
-- category:
build-type:          Simple


common shared-properties
    default-language: Haskell2010
    build-depends:
            base
            , classy-prelude
            , mono-traversable
            , directory
            , string-conversions
            , warp
            , wai
            , mtl
            , blaze-html
            , blaze-markup
            , wai-extra
            , wai
            , http-types
            , inflections
            , text
            , postgresql-simple
            , wai-middleware-static
            , wai-util
            , bytestring
            , network-uri
            , aeson
            , wai-session
            , wai-session-clientsession
            , clientsession
            , pwstore-fast
            , vault
            , data-default
            , random-strings
            , uuid
            , time
            , attoparsec
            , ghc-prim
            , case-insensitive
            , haskell-src-meta
            , template-haskell
            , haskell-src-exts
            , interpolate
            , split
            , containers
            , http-media
            , cookie
            , process
            , newtype-generics
            , countable-inflections
            , typerep-map
            , basic-prelude
            , megaparsec
            , async
            , network
            , unliftio
            , basic-prelude
            , megaparsec
            , async
            , unix
            , fsnotify
            , websockets
            , wai-websockets
            , regex-tdfa
            , binary
            , mime-mail
            , mime-mail-ses
            , http-client
            , http-client-tls
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
    ghc-options: -funfolding-use-threshold=16 -optc-O3 -funbox-strict-fields -fconstraint-solver-iterations=100 -fexpose-all-unfoldings -flate-dmd-anal -fspec-constr-keen -fspecialise-aggressively -fstatic-argument-transformation -fmax-worker-args=200 -threaded -haddock

library IHPFramework
    import: shared-properties
    hs-source-dirs: .
    exposed-modules:
        IHP.AuthSupport.Authentication
        , IHP.AuthSupport.Authorization
        , IHP.AuthSupport.Lockable
        , IHP.Controller.Param
        , IHP.Controller.FileUpload
        , IHP.Controller.Redirect
        , IHP.Controller.Render
        , IHP.Controller.RequestContext
        , IHP.Controller.Session
        , IHP.HtmlSupport.Parser
        , IHP.HtmlSupport.QQ
        , IHP.HtmlSupport.ToHtml
        , IHP.LoginSupport.Helper.Controller
        , IHP.LoginSupport.Helper.View
        , IHP.LoginSupport.Middleware
        , IHP.LoginSupport.Types
        , IHP.ValidationSupport.Types
        , IHP.ValidationSupport.ValidateCanView
        , IHP.ValidationSupport.ValidateField
        , IHP.ValidationSupport.ValidateIsUnique
        , IHP.View.ConvertibleStrings
        , IHP.View.Form
        , IHP.View.Modal
        , IHP.View.TimeAgo
        , IHP.Welcome.Controller
        , IHP.ApplicationContext
        , IHP.ControllerPrelude
        , IHP.ControllerSupport
        , IHP.Environment
        , IHP.FetchRelated
        , IHP.FrameworkConfig
        , IHP.HaskellSupport
        , IHP.ModelSupport
        , IHP.NameSupport
        , IHP.QueryBuilder
        , IHP.RouterPrelude
        , IHP.Server
        , IHP.ValidationSupport
        , IHP.ViewErrorMessages
        , IHP.ViewPrelude
        , IHP.ViewSupport
        , IHP.RouterSupport
        , IHP.Prelude
        , IHP.ErrorController
        , IHP.ScriptSupport
        , IHP.AuthSupport.View.Sessions.New
        , IHP.AuthSupport.Controller.Sessions
        , IHP.SchemaCompiler
        , IHP.IDE.CodeGen.ActionGenerator
        , IHP.IDE.CodeGen.ApplicationGenerator
        , IHP.IDE.CodeGen.Controller
        , IHP.IDE.CodeGen.ControllerGenerator
        , IHP.IDE.CodeGen.ScriptGenerator
        , IHP.IDE.CodeGen.Types
        , IHP.IDE.CodeGen.View.Generators
        , IHP.IDE.CodeGen.View.NewAction
        , IHP.IDE.CodeGen.View.NewApplication
        , IHP.IDE.CodeGen.View.NewController
        , IHP.IDE.CodeGen.View.NewScript
        , IHP.IDE.CodeGen.View.NewView
        , IHP.IDE.CodeGen.ViewGenerator
        , IHP.IDE.Data.Controller
        , IHP.IDE.Data.View.EditRow
        , IHP.IDE.Data.View.EditValue
        , IHP.IDE.Data.View.Layout
        , IHP.IDE.Data.View.NewRow
        , IHP.IDE.Data.View.ShowDatabase
        , IHP.IDE.Data.View.ShowQuery
        , IHP.IDE.Data.View.ShowTableRows
        , IHP.IDE.LiveReloadNotificationServer
        , IHP.IDE.Logs.Controller
        , IHP.IDE.Logs.View.Logs
        , IHP.IDE.PortConfig
        , IHP.IDE.Postgres
        , IHP.IDE.SchemaDesigner.Compiler
        , IHP.IDE.SchemaDesigner.Controller.Columns
        , IHP.IDE.SchemaDesigner.Controller.EnumValues
        , IHP.IDE.SchemaDesigner.Controller.Enums
        , IHP.IDE.SchemaDesigner.Controller.Helper
        , IHP.IDE.SchemaDesigner.Controller.Schema
        , IHP.IDE.SchemaDesigner.Controller.Tables
        , IHP.IDE.SchemaDesigner.Parser
        , IHP.IDE.SchemaDesigner.Types
        , IHP.IDE.SchemaDesigner.View.Columns.Edit
        , IHP.IDE.SchemaDesigner.View.Columns.EditForeignKey
        , IHP.IDE.SchemaDesigner.View.Columns.New
        , IHP.IDE.SchemaDesigner.View.Columns.NewForeignKey
        , IHP.IDE.SchemaDesigner.View.EnumValues.Edit
        , IHP.IDE.SchemaDesigner.View.EnumValues.New
        , IHP.IDE.SchemaDesigner.View.Enums.Edit
        , IHP.IDE.SchemaDesigner.View.Enums.New
        , IHP.IDE.SchemaDesigner.View.Enums.Show
        , IHP.IDE.SchemaDesigner.View.Layout
        , IHP.IDE.SchemaDesigner.View.Schema.Code
        , IHP.IDE.SchemaDesigner.View.Schema.Error
        , IHP.IDE.SchemaDesigner.View.Schema.GeneratedCode
        , IHP.IDE.SchemaDesigner.View.Tables.Edit
        , IHP.IDE.SchemaDesigner.View.Tables.Index
        , IHP.IDE.SchemaDesigner.View.Tables.New
        , IHP.IDE.SchemaDesigner.View.Tables.Show
        , IHP.IDE.StatusServer
        , IHP.IDE.ToolServer
        , IHP.IDE.ToolServer.Helper.Controller
        , IHP.IDE.ToolServer.Layout
        , IHP.IDE.ToolServer.Routes
        , IHP.IDE.ToolServer.Types
        , IHP.IDE.ToolServer.ViewContext
        , IHP.IDE.Types
        , IHP.AutoRefresh
        , IHP.AutoRefresh.Types
        , IHP.AutoRefresh.View
        , IHP.WebSocket
        , IHP.PGNotify
        , IHP.Mail
        , IHP.Mail.Types
        , IHP.MailPrelude

executable RunDevServer
    import: shared-properties
    build-depends: IHPFramework
    hs-source-dirs: exe
    main-is: IHP/IDE/DevServer.hs

executable new-application
    import: shared-properties
    build-depends: IHPFramework
    hs-source-dirs: exe
    main-is: IHP/CLI/NewApplication.hs

executable build-generated-code
    import: shared-properties
    build-depends: IHPFramework
    hs-source-dirs: exe
    main-is: IHP/CLI/BuildGeneratedCode.hs

executable new-controller
    import: shared-properties
    build-depends: IHPFramework
    hs-source-dirs: exe
    main-is: IHP/CLI/NewController.hs

executable delete-controller
    import: shared-properties
    build-depends: IHPFramework
    hs-source-dirs: exe
    main-is: IHP/CLI/DeleteController.hs

executable new-script
    import: shared-properties
    build-depends: IHPFramework
    hs-source-dirs: exe
    main-is: IHP/CLI/NewScript.hs

executable hash-password
    import: shared-properties
    build-depends: IHPFramework
    hs-source-dirs: exe
    main-is: IHP/CLI/HashPassword.hs