cabal-version:       2.2
name:                ihp
version:             0.16.0
synopsis:            Haskell Web Framework
description:         The Integrated Haskell Platform is a full stack framework focused on rapid application development while striving for robust code quality.
license:             NONE
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
-- copyright:
-- category:
build-type:          Simple

Flag FastBuild
    Default: False
    Description: Disables all optimisations, leads to faster build time

common shared-properties
    default-language: Haskell2010
    build-depends:
            base
            , classy-prelude
            , mono-traversable
            , transformers
            , directory
            , string-conversions
            , warp
            , wai
            , mtl
            , blaze-html
            , blaze-markup
            , wai-extra
            , http-types
            , inflections
            , text
            , postgresql-simple
            , wai-middleware-static
            , wai-util
            , bytestring
            , network-uri
            , uri-encode
            , aeson
            , wai-session
            , wai-session-clientsession
            , clientsession
            , pwstore-fast
            , vault
            , data-default
            , random-strings
            , uuid
            , time
            , attoparsec
            , ghc-prim
            , case-insensitive
            , haskell-src-meta
            , template-haskell
            , haskell-src-exts
            , interpolate
            , split
            , containers
            , http-media
            , cookie
            , process
            , typerep-map
            , basic-prelude
            , megaparsec
            , async
            , network
            , unliftio
            , unix
            , fsnotify
            , websockets
            , wai-websockets
            , regex-tdfa
            , binary
            , mime-mail
            , mime-mail-ses
            , smtp-mail
            , http-client
            , http-client-tls
            , resource-pool
            , unordered-containers
            , scientific
            , vector
            , wreq
            , cryptohash
            , base16-bytestring
            , deepseq
            , parser-combinators
            , ip
            , fast-logger
            , regex-pcre-builtin
            , pcre-utils
            , minio-hs
            , temporary
            , conduit-extra
            , wai-cors
            , lens
            , random
            , async-pool
            , hspec
            , cereal
            , cereal-text
            , neat-interpolation
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
        , TemplateHaskell
    if flag(FastBuild)
        ghc-options:
            -j
            -O0
            -threaded
            +RTS -A256m -n4m -H512m -qg -N -RTS

            -Wredundant-constraints
            -Wunused-imports
            -Wunused-foralls
            -Wmissing-fields
            -Winaccessible-code
            -Wmissed-specialisations
            -Wall-missed-specialisations
    else
        ghc-options:
            -fstatic-argument-transformation
            -funbox-strict-fields
            -haddock
            -O1
            -threaded

            -Wredundant-constraints
            -Wunused-imports
            -Wunused-foralls
            -Wmissing-fields
            -Winaccessible-code
            -Wmissed-specialisations
            -Wall-missed-specialisations

library
    import: shared-properties
    hs-source-dirs: .
    exposed-modules:
        IHP.AuthSupport.Authentication
        , IHP.AuthSupport.Authorization
        , IHP.AuthSupport.Lockable
        , IHP.Controller.Param
        , IHP.Controller.FileUpload
        , IHP.Controller.Redirect
        , IHP.Controller.Render
        , IHP.Controller.RequestContext
        , IHP.Controller.Session
        , IHP.Controller.Context
        , IHP.Controller.Layout
        , IHP.Controller.BasicAuth
        , IHP.HSX.Parser
        , IHP.HSX.QQ
        , IHP.HSX.ToHtml
        , IHP.LoginSupport.Helper.Controller
        , IHP.LoginSupport.Helper.View
        , IHP.LoginSupport.Middleware
        , IHP.LoginSupport.Types
        , IHP.ValidationSupport.Types
        , IHP.ValidationSupport.ValidateCanView
        , IHP.ValidationSupport.ValidateField
        , IHP.ValidationSupport.ValidateIsUnique
        , IHP.View.ConvertibleStrings
        , IHP.View.Form
        , IHP.Modal.Types
        , IHP.Modal.ControllerFunctions
        , IHP.Modal.ViewFunctions
        , IHP.View.TimeAgo
        , IHP.Welcome.Controller
        , IHP.ApplicationContext
        , IHP.ControllerPrelude
        , IHP.ControllerSupport
        , IHP.Environment
        , IHP.FetchRelated
        , IHP.FrameworkConfig
        , IHP.HaskellSupport
        , IHP.Log
        , IHP.Log.Types
        , IHP.ModelSupport
        , IHP.NameSupport
        , IHP.NameSupport.Inflections
        , IHP.NameSupport.Inflections.Data
        , IHP.QueryBuilder
        , IHP.Fetch
        , IHP.RouterPrelude
        , IHP.Server
        , IHP.ValidationSupport
        , IHP.ViewErrorMessages
        , IHP.ViewPrelude
        , IHP.ViewSupport
        , IHP.RouterSupport
        , IHP.Router.Types
        , IHP.Prelude
        , IHP.ErrorController
        , IHP.ScriptSupport
        , IHP.AuthSupport.View.Sessions.New
        , IHP.AuthSupport.Controller.Sessions
        , IHP.AutoRefresh
        , IHP.AutoRefresh.Types
        , IHP.AutoRefresh.View
        , IHP.WebSocket
        , IHP.PGNotify
        , IHP.Mail
        , IHP.Mail.Types
        , IHP.MailPrelude
        , IHP.View.Classes
        , IHP.View.CSSFramework
        , IHP.View.Types
        , IHP.FlashMessages.Types
        , IHP.FlashMessages.ControllerFunctions
        , IHP.FlashMessages.ViewFunctions
        , IHP.SchemaMigration
        , IHP.LibDir
        , IHP.Telemetry
        , IHP.Test.Mocking
        , IHP.Test.Database
        , IHP.Version
        , IHP.Postgres.TypeInfo
        , IHP.Postgres.Point
        , IHP.Postgres.Inet
        , IHP.Postgres.TSVector
        , Paths_ihp
        , IHP.Job.Queue
        , IHP.Job.Runner
        , IHP.Job.Types
        , IHP.Job.Dashboard
        , IHP.Job.Dashboard.Types
        , IHP.Job.Dashboard.Auth
        , IHP.Job.Dashboard.View
        , IHP.Job.Dashboard.Utils
        , IHP.PageHead.ControllerFunctions
        , IHP.PageHead.Types
        , IHP.PageHead.ViewFunctions
        , IHP.Assets.Types
        , IHP.Assets.ViewFunctions
        -- Server Side Component Modules
        , IHP.ServerSideComponent.Types
        , IHP.ServerSideComponent.ViewFunctions
        , IHP.ServerSideComponent.RouterFunctions
        , IHP.ServerSideComponent.ControllerFunctions
        , IHP.ServerSideComponent.Controller.ComponentsController
        , IHP.ServerSideComponent.HtmlDiff
        , IHP.ServerSideComponent.HtmlParser
        , IHP.Breadcrumb.Types
        , IHP.Breadcrumb.ViewFunctions
        , IHP.FileStorage.Types
        , IHP.FileStorage.ControllerFunctions
        , IHP.FileStorage.Config
        , IHP.FileStorage.Preprocessor.ImageMagick
        , IHP.FileStorage.MimeTypes
        , IHP.Pagination.ControllerFunctions
        , IHP.Pagination.ViewFunctions
        , IHP.Pagination.Types
        , IHP.Pagination.Helpers
        -- DataSync
        , IHP.DataSync.Types
        , IHP.DataSync.RowLevelSecurity
        , IHP.DataSync.DynamicQuery
        , IHP.DataSync.DynamicQueryCompiler
        , IHP.DataSync.ChangeNotifications
        , IHP.DataSync.Controller
        , IHP.DataSync.REST.Types
        , IHP.DataSync.REST.Routes
        , IHP.DataSync.REST.Controller
        , IHP.DataSync.Role
        , IHP.PGListener
        -- IDE MODULES
        -- We cannot split this into manual library sections because of https://github.com/haskell/cabal/issues/1919
        , IHP.IDE.SchemaDesigner.Controller.Columns
        , IHP.IDE.SchemaDesigner.Controller.EnumValues
        , IHP.IDE.SchemaDesigner.Controller.Enums
        , IHP.IDE.SchemaDesigner.Controller.Helper
        , IHP.IDE.SchemaDesigner.Controller.Schema
        , IHP.IDE.SchemaDesigner.Controller.Tables
        , IHP.IDE.SchemaDesigner.Controller.Validation
        , IHP.IDE.SchemaDesigner.Controller.Policies
        , IHP.IDE.SchemaDesigner.View.Columns.Edit
        , IHP.IDE.SchemaDesigner.View.Columns.EditForeignKey
        , IHP.IDE.SchemaDesigner.View.Columns.New
        , IHP.IDE.SchemaDesigner.View.Columns.NewForeignKey
        , IHP.IDE.SchemaDesigner.View.EnumValues.Edit
        , IHP.IDE.SchemaDesigner.View.EnumValues.New
        , IHP.IDE.SchemaDesigner.View.Enums.Edit
        , IHP.IDE.SchemaDesigner.View.Enums.New
        , IHP.IDE.SchemaDesigner.View.Enums.Show
        , IHP.IDE.SchemaDesigner.View.Layout
        , IHP.IDE.SchemaDesigner.View.Schema.Code
        , IHP.IDE.SchemaDesigner.View.Schema.Error
        , IHP.IDE.SchemaDesigner.View.Schema.GeneratedCode
        , IHP.IDE.SchemaDesigner.View.Schema.SchemaUpdateFailed
        , IHP.IDE.SchemaDesigner.View.Tables.Edit
        , IHP.IDE.SchemaDesigner.View.Tables.Index
        , IHP.IDE.SchemaDesigner.View.Tables.New
        , IHP.IDE.SchemaDesigner.View.Tables.Show
        , IHP.IDE.SchemaDesigner.View.Policies.New
        , IHP.IDE.SchemaDesigner.View.Policies.Edit
        , IHP.IDE.SchemaDesigner.SchemaOperations
        , IHP.IDE.Data.Controller
        , IHP.IDE.Data.View.EditRow
        , IHP.IDE.Data.View.EditValue
        , IHP.IDE.Data.View.Layout
        , IHP.IDE.Data.View.NewRow
        , IHP.IDE.Data.View.ShowDatabase
        , IHP.IDE.Data.View.ShowQuery
        , IHP.IDE.Data.View.ShowTableRows
        , IHP.IDE.CodeGen.View.Generators
        , IHP.IDE.CodeGen.View.NewAction
        , IHP.IDE.CodeGen.View.NewApplication
        , IHP.IDE.CodeGen.View.NewController
        , IHP.IDE.CodeGen.View.NewScript
        , IHP.IDE.CodeGen.View.NewView
        , IHP.IDE.CodeGen.View.NewMigration
        , IHP.IDE.Logs.View.Logs
        , IHP.IDE.Logs.Controller
        , IHP.IDE.CodeGen.View.NewMail
        , IHP.IDE.ToolServer
        , IHP.IDE.ToolServer.Helper.Controller
        , IHP.IDE.ToolServer.Layout
        , IHP.IDE.ToolServer.Routes
        , IHP.IDE.ToolServer.Types
        , IHP.IDE.Types
        , IHP.IDE.CodeGen.ActionGenerator
        , IHP.IDE.CodeGen.ApplicationGenerator
        , IHP.IDE.CodeGen.Controller
        , IHP.IDE.CodeGen.ControllerGenerator
        , IHP.IDE.CodeGen.ScriptGenerator
        , IHP.IDE.CodeGen.Types
        , IHP.IDE.CodeGen.ViewGenerator
        , IHP.IDE.CodeGen.JobGenerator
        , IHP.IDE.CodeGen.View.NewJob
        , IHP.IDE.CodeGen.MailGenerator
        , IHP.IDE.CodeGen.MigrationGenerator
        , IHP.IDE.LiveReloadNotificationServer
        , IHP.IDE.PortConfig
        , IHP.IDE.Postgres
        , IHP.IDE.StatusServer
        , IHP.SchemaCompiler
        , IHP.IDE.SchemaDesigner.Compiler
        , IHP.IDE.SchemaDesigner.Parser
        , IHP.IDE.SchemaDesigner.Types

        -- IHP PRO
        , IHP.AuthSupport.Controller.PasswordResets
        , IHP.AuthSupport.Mail.PasswordResets.PasswordResetLink
        , IHP.AuthSupport.Types
        , IHP.AuthSupport.View.PasswordResets.New
        , IHP.AuthSupport.View.PasswordResets.Show
        , IHP.AuthSupport.Confirm
        , IHP.AuthSupport.Controller.Confirmations

executable RunDevServer
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/IDE/DevServer.hs
    if flag(FastBuild)
        ghc-options:
            -j
            -O0
            -threaded
            +RTS -A512m -n4m -H512m -G3 -qg -N -RTS
    else
        ghc-options:
            -fconstraint-solver-iterations=100
            -fexpose-all-unfoldings
            -flate-dmd-anal
            -flate-specialise
            -fmax-worker-args=200
            -fspec-constr-keen
            -fspecialise-aggressively
            -fstatic-argument-transformation
            -funbox-strict-fields
            -funfolding-use-threshold=16
            -j
            -O2
            -threaded
            -with-rtsopts=-A512m
            -with-rtsopts=-N
            -with-rtsopts=-n4m
            -with-rtsopts=--nonmoving-gc
            +RTS -A256m -n4m -H512m -G3 -qg -N -RTS

executable new-application
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/NewApplication.hs

executable build-generated-code
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/BuildGeneratedCode.hs

executable new-controller
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/NewController.hs

executable delete-controller
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/DeleteController.hs

executable new-script
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/NewScript.hs

executable new-migration
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/NewMigration.hs

executable migrate
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/Migrate.hs

executable hash-password
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/HashPassword.hs

-- IHP Pro
executable ihp-app-to-docker-image
    import: shared-properties
    build-depends: ihp
    hs-source-dirs: exe
    main-is: IHP/CLI/IHPAppToDockerImage.hs
