cabal-version:       2.2
name:                ihp
version:             1.3.0
synopsis:            Haskell Web Framework
description:         The Integrated Haskell Platform is a full stack framework focused on rapid application development while striving for robust code quality.
license:             NONE
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
-- copyright:
-- category:
build-type:          Simple

Flag FastBuild
    Default: True
    Description: Disables all optimisations, leads to faster build time

common shared-properties
    default-language: Haskell2010
    build-depends:
            base
            , classy-prelude
            , mono-traversable
            , transformers
            , directory
            , string-conversions
            , warp
            , wai
            , mtl
            , blaze-html
            , blaze-markup
            , wai-extra
            , http-types
            , inflections
            , text
            , postgresql-simple
            , wai-app-static
            , wai-util
            , bytestring
            , network-uri
            , uri-encode
            , aeson
            , wai-session
            , wai-session-clientsession
            , clientsession
            , pwstore-fast
            , vault
            , data-default
            , random-strings
            , uuid
            , time
            , attoparsec
            , ghc-prim
            , case-insensitive
            , haskell-src-meta
            , template-haskell
            , haskell-src-exts
            , interpolate
            , split
            , containers
            , http-media
            , cookie
            , process
            , typerep-map
            , basic-prelude
            , async
            , network
            , unliftio
            , unix
            , websockets
            , wai-websockets
            , regex-tdfa
            , binary
            , mime-mail
            , mime-mail-ses
            , smtp-mail
            , http-client
            , http-client-tls
            , resource-pool
            , unordered-containers
            , scientific
            , vector
            , wreq
            , deepseq
            , parser-combinators
            , ip
            , fast-logger
            , regex-pcre-builtin
            , pcre-utils
            , minio-hs
            , temporary
            , conduit-extra
            , wai-cors
            , lens
            , random
            , hspec
            , cereal
            , cereal-text
            , neat-interpolation
            , unagi-chan
            , with-utf8
            , ihp-hsx
            , ihp-postgresql-simple-extra
            -- Used for 'Control.Debounce' in 'IHP.IDE.FileWatcher'
            , auto-update 
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
        , TemplateHaskell
        , OverloadedRecordDot
    if flag(FastBuild)
        ghc-options:
            -j
            -O0
            -threaded
            +RTS -A256m -n4m -H512m -qg -N -RTS

            -Wunused-imports
            -Wunused-foralls
            -Wmissing-fields
            -Winaccessible-code
            -Wmissed-specialisations
            -Wall-missed-specialisations
            -Wno-ambiguous-fields
    else
        ghc-options:
            -fstatic-argument-transformation
            -funbox-strict-fields
            -haddock
            -O1
            -threaded

            -Wunused-imports
            -Wunused-foralls
            -Wmissing-fields
            -Winaccessible-code
            -Wmissed-specialisations
            -Wall-missed-specialisations
            -fexpose-all-unfoldings
            -Wno-ambiguous-fields

library
    import: shared-properties
    hs-source-dirs: .
    exposed-modules:
        IHP.AuthSupport.Authentication
        , IHP.AuthSupport.Lockable
        , IHP.Controller.Param
        , IHP.Controller.FileUpload
        , IHP.Controller.Redirect
        , IHP.Controller.Render
        , IHP.Controller.RequestContext
        , IHP.Controller.Session
        , IHP.Controller.Context
        , IHP.Controller.Layout
        , IHP.Controller.BasicAuth
        , IHP.Controller.Cookie
        , IHP.Controller.AccessDenied
        , IHP.Controller.NotFound
        , IHP.Controller.Response
        , IHP.LoginSupport.Helper.Controller
        , IHP.LoginSupport.Helper.View
        , IHP.LoginSupport.Middleware
        , IHP.LoginSupport.Types
        , IHP.ValidationSupport.Types
        , IHP.ValidationSupport.ValidateField
        , IHP.ValidationSupport.ValidateIsUnique
        , IHP.View.Form
        , IHP.Modal.Types
        , IHP.Modal.ControllerFunctions
        , IHP.Modal.ViewFunctions
        , IHP.View.TimeAgo
        , IHP.Welcome.Controller
        , IHP.ApplicationContext
        , IHP.ControllerPrelude
        , IHP.ControllerSupport
        , IHP.Environment
        , IHP.FetchRelated
        , IHP.FrameworkConfig
        , IHP.HaskellSupport
        , IHP.Log
        , IHP.Log.Types
        , IHP.ModelSupport
        , IHP.NameSupport
        , IHP.NameSupport.Inflections
        , IHP.NameSupport.Inflections.Data
        , IHP.QueryBuilder
        , IHP.Fetch
        , IHP.RouterPrelude
        , IHP.Server
        , IHP.ValidationSupport
        , IHP.ViewErrorMessages
        , IHP.ViewPrelude
        , IHP.ViewSupport
        , IHP.RouterSupport
        , IHP.Router.Types
        , IHP.Prelude
        , IHP.ErrorController
        , IHP.ScriptSupport
        , IHP.AuthSupport.View.Sessions.New
        , IHP.AuthSupport.Controller.Sessions
        , IHP.AutoRefresh
        , IHP.AutoRefresh.Types
        , IHP.AutoRefresh.View
        , IHP.WebSocket
        , IHP.Mail
        , IHP.Mail.Types
        , IHP.MailPrelude
        , IHP.View.Classes
        , IHP.View.CSSFramework
        , IHP.View.Types
        , IHP.FlashMessages.Types
        , IHP.FlashMessages.ControllerFunctions
        , IHP.FlashMessages.ViewFunctions
        , IHP.SchemaMigration
        , IHP.LibDir
        , IHP.Test.Mocking
        , IHP.Test.Database
        , IHP.Version
        , Paths_ihp
        , IHP.Job.Queue
        , IHP.Job.Runner
        , IHP.Job.Types
        , IHP.Job.Dashboard
        , IHP.Job.Dashboard.Types
        , IHP.Job.Dashboard.Auth
        , IHP.Job.Dashboard.View
        , IHP.Job.Dashboard.Utils
        , IHP.PageHead.ControllerFunctions
        , IHP.PageHead.Types
        , IHP.PageHead.ViewFunctions
        , IHP.Assets.Types
        , IHP.Assets.ViewFunctions
        , IHP.Breadcrumb.Types
        , IHP.Breadcrumb.ViewFunctions
        , IHP.FileStorage.Types
        , IHP.FileStorage.ControllerFunctions
        , IHP.FileStorage.Config
        , IHP.FileStorage.Preprocessor.ImageMagick
        , IHP.FileStorage.MimeTypes
        , IHP.Pagination.ControllerFunctions
        , IHP.Pagination.ViewFunctions
        , IHP.Pagination.Types
        , IHP.Pagination.Helpers
        -- DataSync
        , IHP.DataSync.Types
        , IHP.DataSync.RowLevelSecurity
        , IHP.DataSync.DynamicQuery
        , IHP.DataSync.DynamicQueryCompiler
        , IHP.DataSync.ChangeNotifications
        , IHP.DataSync.Controller
        , IHP.DataSync.ControllerImpl
        , IHP.DataSync.REST.Types
        , IHP.DataSync.REST.Routes
        , IHP.DataSync.REST.Controller
        , IHP.DataSync.Role
        , IHP.PGListener
        , IHP.SEO.Sitemap.Types
        , IHP.SEO.Sitemap.ControllerFunctions
        , IHP.SEO.Sitemap.Routes
        , IHP.EnvVar